data/derived/comb/progs/unify/prog6707.ml.out
Characters 79-80:
  let movedList=List.append  l 0 in (bit+1,bigAdd movedList x) in 
                               ^
Error: This expression has type int but an expression was expected of type
         'a list
